# Borcsh

./: .gitignore  CMakeLists.txt
examples/: Game.cpp  Systems.hpp  components.hpp  main2.cpp
include/: fef.hpp
src/: EcsMask.hpp  EcsPool.hpp  EcsQuery.hpp  EcsSystems.hpp  EcsWorld.hpp  WithT.hpp
